// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneOverview devices is optional 1`] = `
<DocumentFragment>
  <div
    class="mb-3 accordion"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="true"
          class="accordion-button"
          type="button"
        >
          Living room
        </button>
      </h2>
      <div
        class="accordion-collapse collapse show"
      >
        <div
          class="accordion-body"
        >
          <div
            class="list-group"
          >
            <div
              class="list-group"
            />
          </div>
          <div
            class="mt-2 btn-group btn-group-lg"
            role="group"
          >
            <input
              autocomplete="off"
              checked=""
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-off"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="off"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-off"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-power-off"
                data-icon="power-off"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M288 0c0-17.7-14.3-32-32-32S224-17.7 224 0l0 256c0 17.7 14.3 32 32 32s32-14.3 32-32L288 0zM146.3 98.4c14.5-10.1 18-30.1 7.9-44.6s-30.1-18-44.6-7.9C43.4 92.1 0 169 0 256 0 397.4 114.6 512 256 512S512 397.4 512 256c0-87-43.4-163.9-109.7-210.1-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6c49.8 34.8 82.3 92.4 82.3 157.6 0 106-86 192-192 192S64 362 64 256c0-65.2 32.5-122.9 82.3-157.6z"
                  fill="currentColor"
                />
              </svg>
               Off
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-0"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="ice"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-0"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-snowflake"
                data-icon="snowflake"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M288.2 0c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 62.1-15-15c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l49 49 0 70.6-61.2-35.3-17.9-66.9c-3.4-12.8-16.6-20.4-29.4-17S95.3 98 98.7 110.8l5.5 20.5-53.7-31C35.2 91.5 15.6 96.7 6.8 112s-3.6 34.9 11.7 43.7l53.7 31-20.5 5.5c-12.8 3.4-20.4 16.6-17 29.4s16.6 20.4 29.4 17l66.9-17.9 61.2 35.3-61.2 35.3-66.9-17.9c-12.8-3.4-26 4.2-29.4 17s4.2 26 17 29.4l20.5 5.5-53.7 31C3.2 365.1-2 384.7 6.8 400s28.4 20.6 43.7 11.7l53.7-31-5.5 20.5c-3.4 12.8 4.2 26 17 29.4s26-4.2 29.4-17l17.9-66.9 61.2-35.3 0 70.6-49 49c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l15-15 0 62.1c0 17.7 14.3 32 32 32s32-14.3 32-32l0-62.1 15 15c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-49-49 0-70.6 61.2 35.3 17.9 66.9c3.4 12.8 16.6 20.4 29.4 17s20.4-16.6 17-29.4l-5.5-20.5 53.7 31c15.3 8.8 34.9 3.6 43.7-11.7s3.6-34.9-11.7-43.7l-53.7-31 20.5-5.5c12.8-3.4 20.4-16.6 17-29.4s-16.6-20.4-29.4-17l-66.9 17.9-61.2-35.3 61.2-35.3 66.9 17.9c12.8 3.4 26-4.2 29.4-17s-4.2-26-17-29.4l-20.5-5.5 53.7-31c15.3-8.8 20.6-28.4 11.7-43.7s-28.4-20.5-43.7-11.7l-53.7 31 5.5-20.5c3.4-12.8-4.2-26-17-29.4s-26 4.2-29.4 17l-17.9 66.9-61.2 35.3 0-70.6 49-49c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-15 15 0-62.1z"
                  fill="currentColor"
                />
              </svg>
               Ice
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-1"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="eco"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-1"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-leaf"
                data-icon="leaf"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M471.3 6.7C477.7 .6 487-1.6 495.6 1.2 505.4 4.5 512 13.7 512 24l0 186.9c0 131.2-108.1 237.1-238.8 237.1-77 0-143.4-49.5-167.5-118.7-35.4 30.8-57.7 76.1-57.7 126.7 0 13.3-10.7 24-24 24S0 469.3 0 456C0 381.1 38.2 315.1 96.1 276.3 131.4 252.7 173.5 240 216 240l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-80 0c-39.7 0-77.3 8.8-111 24.5 23.3-70 89.2-120.5 167-120.5 66.4 0 115.8-22.1 148.7-44 19.2-12.8 35.5-28.1 50.7-45.3z"
                  fill="currentColor"
                />
              </svg>
               Eco
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-2"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="comfort"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-2"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sun"
                data-icon="sun"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
              >
                <path
                  d="M288-32c8.4 0 16.3 4.4 20.6 11.7L364.1 72.3 468.9 46c8.2-2 16.9 .4 22.8 6.3S500 67 498 75.1l-26.3 104.7 92.7 55.5c7.2 4.3 11.7 12.2 11.7 20.6s-4.4 16.3-11.7 20.6L471.7 332.1 498 436.8c2 8.2-.4 16.9-6.3 22.8S477 468 468.9 466l-104.7-26.3-55.5 92.7c-4.3 7.2-12.2 11.7-20.6 11.7s-16.3-4.4-20.6-11.7L211.9 439.7 107.2 466c-8.2 2-16.8-.4-22.8-6.3S76 445 78 436.8l26.2-104.7-92.6-55.5C4.4 272.2 0 264.4 0 256s4.4-16.3 11.7-20.6L104.3 179.9 78 75.1c-2-8.2 .3-16.8 6.3-22.8S99 44 107.2 46l104.7 26.2 55.5-92.6 1.8-2.6c4.5-5.7 11.4-9.1 18.8-9.1zm0 144a144 144 0 1 0 0 288 144 144 0 1 0 0-288zm0 240a96 96 0 1 1 0-192 96 96 0 1 1 0 192z"
                  fill="currentColor"
                />
              </svg>
               Comfort
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Advanced
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <ul>
            <li>
              id: -MpGOkgR4zExLBUDUafq
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              type: radiator
            </li>
            <li>
              comfort: 22°
            </li>
            <li>
              eco: 16°
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              power: true
            </li>
            <li>
              mode: manual
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Debug
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <pre>
            {
  "comfort": 22,
  "eco": 16,
  "id": "-MpGOkgR4zExLBUDUafq",
  "mode": "manual",
  "name": "Living room",
  "power": true,
  "temp": 21,
  "type": "radiator",
  "status": "comfort"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZoneOverview renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mb-3 accordion"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="true"
          class="accordion-button"
          type="button"
        >
          Living room
        </button>
      </h2>
      <div
        class="accordion-collapse collapse show"
      >
        <div
          class="accordion-body"
        >
          <div
            class="list-group"
          >
            <div
              class="list-group"
            >
              <a
                class="list-group-item list-group-item-action"
                data-rr-ui-event-key="#/devices/D89DDF3A7D80D89DDF3A7D80"
                href="#/devices/D89DDF3A7D80D89DDF3A7D80"
              >
                D89DDF3A7D80D89DDF3A7D80
              </a>
              <a
                class="list-group-item list-group-item-action"
                data-rr-ui-event-key="#/devices/F9097F334FC4F9097F334FC4"
                href="#/devices/F9097F334FC4F9097F334FC4"
              >
                F9097F334FC4F9097F334FC4
              </a>
            </div>
          </div>
          <div
            class="mt-2 btn-group btn-group-lg"
            role="group"
          >
            <input
              autocomplete="off"
              checked=""
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-off"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="off"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-off"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-power-off"
                data-icon="power-off"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M288 0c0-17.7-14.3-32-32-32S224-17.7 224 0l0 256c0 17.7 14.3 32 32 32s32-14.3 32-32L288 0zM146.3 98.4c14.5-10.1 18-30.1 7.9-44.6s-30.1-18-44.6-7.9C43.4 92.1 0 169 0 256 0 397.4 114.6 512 256 512S512 397.4 512 256c0-87-43.4-163.9-109.7-210.1-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6c49.8 34.8 82.3 92.4 82.3 157.6 0 106-86 192-192 192S64 362 64 256c0-65.2 32.5-122.9 82.3-157.6z"
                  fill="currentColor"
                />
              </svg>
               Off
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-0"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="ice"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-0"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-snowflake"
                data-icon="snowflake"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M288.2 0c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 62.1-15-15c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l49 49 0 70.6-61.2-35.3-17.9-66.9c-3.4-12.8-16.6-20.4-29.4-17S95.3 98 98.7 110.8l5.5 20.5-53.7-31C35.2 91.5 15.6 96.7 6.8 112s-3.6 34.9 11.7 43.7l53.7 31-20.5 5.5c-12.8 3.4-20.4 16.6-17 29.4s16.6 20.4 29.4 17l66.9-17.9 61.2 35.3-61.2 35.3-66.9-17.9c-12.8-3.4-26 4.2-29.4 17s4.2 26 17 29.4l20.5 5.5-53.7 31C3.2 365.1-2 384.7 6.8 400s28.4 20.6 43.7 11.7l53.7-31-5.5 20.5c-3.4 12.8 4.2 26 17 29.4s26-4.2 29.4-17l17.9-66.9 61.2-35.3 0 70.6-49 49c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l15-15 0 62.1c0 17.7 14.3 32 32 32s32-14.3 32-32l0-62.1 15 15c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-49-49 0-70.6 61.2 35.3 17.9 66.9c3.4 12.8 16.6 20.4 29.4 17s20.4-16.6 17-29.4l-5.5-20.5 53.7 31c15.3 8.8 34.9 3.6 43.7-11.7s3.6-34.9-11.7-43.7l-53.7-31 20.5-5.5c12.8-3.4 20.4-16.6 17-29.4s-16.6-20.4-29.4-17l-66.9 17.9-61.2-35.3 61.2-35.3 66.9 17.9c12.8 3.4 26-4.2 29.4-17s-4.2-26-17-29.4l-20.5-5.5 53.7-31c15.3-8.8 20.6-28.4 11.7-43.7s-28.4-20.5-43.7-11.7l-53.7 31 5.5-20.5c3.4-12.8-4.2-26-17-29.4s-26 4.2-29.4 17l-17.9 66.9-61.2 35.3 0-70.6 49-49c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-15 15 0-62.1z"
                  fill="currentColor"
                />
              </svg>
               Ice
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-1"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="eco"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-1"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-leaf"
                data-icon="leaf"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M471.3 6.7C477.7 .6 487-1.6 495.6 1.2 505.4 4.5 512 13.7 512 24l0 186.9c0 131.2-108.1 237.1-238.8 237.1-77 0-143.4-49.5-167.5-118.7-35.4 30.8-57.7 76.1-57.7 126.7 0 13.3-10.7 24-24 24S0 469.3 0 456C0 381.1 38.2 315.1 96.1 276.3 131.4 252.7 173.5 240 216 240l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-80 0c-39.7 0-77.3 8.8-111 24.5 23.3-70 89.2-120.5 167-120.5 66.4 0 115.8-22.1 148.7-44 19.2-12.8 35.5-28.1 50.7-45.3z"
                  fill="currentColor"
                />
              </svg>
               Eco
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-2"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="comfort"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-2"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sun"
                data-icon="sun"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
              >
                <path
                  d="M288-32c8.4 0 16.3 4.4 20.6 11.7L364.1 72.3 468.9 46c8.2-2 16.9 .4 22.8 6.3S500 67 498 75.1l-26.3 104.7 92.7 55.5c7.2 4.3 11.7 12.2 11.7 20.6s-4.4 16.3-11.7 20.6L471.7 332.1 498 436.8c2 8.2-.4 16.9-6.3 22.8S477 468 468.9 466l-104.7-26.3-55.5 92.7c-4.3 7.2-12.2 11.7-20.6 11.7s-16.3-4.4-20.6-11.7L211.9 439.7 107.2 466c-8.2 2-16.8-.4-22.8-6.3S76 445 78 436.8l26.2-104.7-92.6-55.5C4.4 272.2 0 264.4 0 256s4.4-16.3 11.7-20.6L104.3 179.9 78 75.1c-2-8.2 .3-16.8 6.3-22.8S99 44 107.2 46l104.7 26.2 55.5-92.6 1.8-2.6c4.5-5.7 11.4-9.1 18.8-9.1zm0 144a144 144 0 1 0 0 288 144 144 0 1 0 0-288zm0 240a96 96 0 1 1 0-192 96 96 0 1 1 0 192z"
                  fill="currentColor"
                />
              </svg>
               Comfort
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Advanced
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <ul>
            <li>
              id: -MpGOkgR4zExLBUDUafq
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              type: radiator
            </li>
            <li>
              comfort: 22°
            </li>
            <li>
              eco: 16°
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              power: true
            </li>
            <li>
              mode: manual
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Debug
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <pre>
            {
  "comfort": 22,
  "devices": {
    "D89DDF3A7D80D89DDF3A7D80": true,
    "F9097F334FC4F9097F334FC4": true
  },
  "eco": 16,
  "id": "-MpGOkgR4zExLBUDUafq",
  "mode": "manual",
  "name": "Living room",
  "power": true,
  "temp": 21,
  "type": "radiator",
  "status": "comfort"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
